--- a/templates/tariff_selectors.html
+++ b/templates/tariff_selectors.html
@@ -1,25 +1,65 @@
-<div id="left_tariff_col"  class="col" style="width: 15%">
-    <div class="label_stacked">Type:</div>
-    <div class="label_stacked">State:</div>
-    <div class="label_stacked">Provider:</div>
-    <div class="label_stacked">Year:</div>
-    <div class="label_stacked">Tariff:</div>
+<div class="col" style="width: 50%">
+    <div class="row" style="height: 15%">
+        <h4 style="margin: 0;">Filter tariffs:</h4>
+        <hr style="width: 80%; float: left;">
+    </div>
+    <div class="row" style="height: 50%">
+        <div id="left_tariff_col"  class="col" style="width: 30%">
+            <div class="label_stacked">Type:</div>
+            <div class="label_stacked">State:</div>
+            <div class="label_stacked">Provider:</div>
+            <div class="label_stacked">Year:</div>
+        </div>
+        <div id="middle_tariff_col" class="col" style="width: 50%">
+            <select class="select_tariff_type tariff_filter">
+                <option selected="selected">Select1</option>
+            </select>
+            <select class="select_tariff_state tariff_filter">
+                <option selected="selected">Select1</option>
+            </select>
+            <select class="select_tariff_provider tariff_filter">
+                <option selected="selected">Select1</option>
+            </select>
+            <select class="select_tariff_year tariff_filter">
+                <option selected="selected">Select1</option>
+            </select>
+        </div>
+    </div>
+    <div class="row" style="height: 15%">
+        <h4 style="margin: 0;">Select tariff:</h4>
+        <hr style="width: 80%; float: left;">
+    </div>
+    <div class="row" style="height: 35%">
+        <div class="col" style="width: 30%">
+            <div class="label_stacked">Tariff:</div>
+        </div>
+        <div class="col" style="width: 50%">
+            <select class="select_tariff">
+                <option selected="selected">Select1</option>
+            </select>
+        </div>
+    </div>
 </div>
-<div id="middle_tariff_col" class="col" style="width: 30%">
-    <select class="select_tariff_type tariff_filter">
-        <option selected="selected">Select1</option>
-    </select>
-    <select class="select_tariff_state tariff_filter">
-        <option selected="selected">Select1</option>
-    </select>
-    <select class="select_tariff_provider tariff_filter">
-        <option selected="selected">Select1</option>
-    </select>
-    <select class="select_tariff_year tariff_filter">
-        <option selected="selected">Select1</option>
-    </select>
-    <select class="select_tariff">
-        <option selected="selected">Select1</option>
-    </select>
+<div class="col" style="width: 50%">
+    <div class="row" style="height: 15%">
+        <h4 style="margin: 0;">Selected tariff:</h4>
+        <hr style="width: 80%; float: left;">
+    </div>
+    <div class="row" style="height: 85%">
+        <div class="tariff_panel_header col" style="width: 30%;">
+            <div class="name_label label_stacked">Name:&nbsp</div>
+            <div class="type_label label_stacked">Type:&nbsp</div>
+            <div class="state_label label_stacked">State:&nbsp</div>
+            <div style="height: 5%;" class="add_case row"
+                 onclick="get_default_case_name(event, this)">
+                <button>Add</button>
+            </div>
+        </div>
+        <div class="tariff_panel_header col" style="width: 70%;">
+            <div class="name_value label_stacked">N/A</div>
+            <div class="type_value label_stacked">N/A</div>
+            <div class="state_value label_stacked">N/A</div>
+        </div>
+    </div>
 </div>
 
