thin tab borders

--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,7 @@
 
       .tabcontent {
         border-style: groove;
-        border-width: 0.1%;
+        border-width: 2px;
         height: 100%;
         box-sizing: border-box;
         padding: 1%;
@@ -159,7 +159,7 @@
 
       .results_tab_content {
         border-style: groove;
-        border-width: 0.1%;
+        border-width: 2px;
         height: 95%;
         box-sizing: border-box;
         padding: 1%;
@@ -176,7 +176,7 @@
 
       .tariff_type_tab_content {
         border-style: groove;
-        border-width: 0.1%;
+        border-width: 2px;
         height: 100%;
         box-sizing: border-box;
         padding: 1%;
@@ -187,7 +187,7 @@
        .case_info_tab_content {
         display: none;
         border-style: groove;
-        border-width: 0.1%;
+        border-width: 2px;
         height: 85.5%;
         box-sizing: border-box;
         padding: 1%;
