changed button and select style

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,10 +60,21 @@
         height: 2.25vh;
         margin-bottom: 2vh;
         width: 100%;
+        font-size: 1.25vh;
       }
 
       button {
         height: 2.25vh;
+        background-color: inherit;
+        float: left;
+        border-style: solid;
+        border-width: 1px;
+        margin: 0;
+        font-size: 1.25vh;
+      }
+
+      button:hover {
+        background-color: #ddd;
       }
 
       input {
