--- a/templates/index.html
+++ b/templates/index.html
@@ -321,7 +321,13 @@
                 <div  style="float: right; width: 45%; height: 100%; ">
                     <select  id="select_graph" style="width:100%">
                         <option value="Annual Average Profile"> Annual Average Profile</option>
+                        <option value="Daily Profiles">Daily Profiles</option>
+                        <option value="Daily Profile Interquartile Range">Daily Profile Interquartile Range</option>
                         <option value="Daily kWh Histogram">Daily kWh Histogram</option>
+                        <option value="Average Load Duration Curve">Average Load Duration Curve</option>
+                        <option value="Average Peak Day Profile">Average Peak Day Profile</option>
+                        <option value="Monthly Average kWh">Monthly Average kWh</option>
+                        <option value="Seasonal Daily Pattern">Seasonal Daily Pattern</option>
                     </select>
                 </div>
                 <div style="float: right; width: 10%; height: 100%;">
