--- a/templates/index.html
+++ b/templates/index.html
@@ -559,10 +559,7 @@
                                 </div>
                             </div>
                         </div>
-                        <table id="info_tariff_table" class="display nowrap" style="width:100%; height:55%;">
-                            <thead class="tariff_table_header" id="info_tariff_table_header"></thead>
-                            <tbody id="info_tariff_table_body"></tbody>
-                        </table>
+                        <div id="info" style="width:100%; height:55%; overflow-x: scroll; overflow-y: scroll"></div>
                     </div>
                     <div class="case_info_tab_content" id="demog_info"></div>
                 </div>
