--- a/templates/index.html
+++ b/templates/index.html
@@ -570,13 +570,13 @@
                 <div id="network_tariff_selection_panel" class="tariff_type_tab_content">
                     <div class="upper_tariff_section row" style="height: 45%;">
                         <script>$("#network_tariff_selection_panel .upper_tariff_section").load("tariff_selectors",
-                                function(){
-                                    get_tariff_options("network_tariff_selection_panel")
-                                    $('#network_tariff_selection_panel .select_tariff').on('change', function() {
-                                        get_tariff('network_tariff_selection_panel');
-                                    });
-                                    $('#network_tariff_selection_panel .tariff_filter').on('change', function() {
-                                        get_tariff_options('network_tariff_selection_panel');
+                                    function(){
+                                        get_tariff_options("network_tariff_selection_panel");
+                                        $('#network_tariff_selection_panel .select_tariff').on('change', function() {
+                                            get_tariff('network_tariff_selection_panel');
+                                        });
+                                        $('#network_tariff_selection_panel .tariff_filter').on('change', function() {
+                                            get_tariff_options('network_tariff_selection_panel');
                                     });
                               });
                         </script>
@@ -594,10 +594,10 @@
                                     onclick="displayTariff(event, 'network_tariff_selection_panel', 'NUOS')">NUOS</button>
                         </div>
                         <div style="height: 95%; width: 100%; overflow: hidden;">
-                            <div id="DUOS" class="tabcontent" style="overflow-y: scroll"></div>
-                            <div id="TUOS" class="tabcontent" style="overflow-y: scroll"></div>
-                            <div id="DTUOS" class="tabcontent" style="overflow-y: scroll"></div>
-                            <div id="NUOS" class="tabcontent" style="overflow-y: scroll"></div>
+                            <div id="DUOS" class="tabcontent table_set" style="overflow-y: scroll"></div>
+                            <div id="TUOS" class="tabcontent table_set" style="overflow-y: scroll"></div>
+                            <div id="DTUOS" class="tabcontent table_set" style="overflow-y: scroll"></div>
+                            <div id="NUOS" class="tabcontent table_set" style="overflow-y: scroll"></div>
                         </div>
                         <script>document.getElementById("network_default_tab").click();</script>
                     </div>
@@ -623,7 +623,7 @@
                             </button>
                         </div>
                         <div style="height: 95%; width: 100%; overflow: hidden; ">
-                            <div id="Retail" class="tabcontent" style="overflow-y: scroll"></div>
+                            <div id="Retail" class="tabcontent table_set" style="overflow-y: scroll"></div>
                         </div>
                         <script>document.getElementById("retail_default_tab").click();</script>
                     </div>
