--- a/templates/tariff_selectors.html
+++ b/templates/tariff_selectors.html
@@ -35,7 +35,7 @@
         </div>
         <div class="col" style="width: 50%">
             <select class="select_tariff">
-                <option selected="selected">Select one</option>
+                <option selected="selected">None</option>
             </select>
         </div>
     </div>
