retail single case draft working

--- a/templates/index.html
+++ b/templates/index.html
@@ -317,7 +317,7 @@
 
     <div id="right_column" class="main_tab" style="height: 100%; width: 83%; float: left; overflow: hidden;">
         <div id="load_panel" class="main_tab_content">
-            <div id="load_selecion" class="row" style="height: 2.5%;">
+            <div id="load_selection" class="row" style="height: 2.5%;">
                 <div class="col" style="width: 50%;">
                     <div class="col">Selected:</div>
                     <select id="select" class="col" style="width: 60%" name="select"><option selected="selected">blank</option></select>
