--- a/templates/tariff_selectors.html
+++ b/templates/tariff_selectors.html
@@ -1,6 +1,6 @@
 <div class="col" style="width: 50%">
-    <div class="row" style="height: 15%">
-        <h4 style="margin: 0;">Filter tariffs:</h4>
+    <div class="row" style="height: 12%">
+        <h4 style="margin: 0;">Filter tariffs</h4>
         <hr style="width: 80%; float: left;">
     </div>
     <div class="row" style="height: 45%">
@@ -26,7 +26,7 @@
         </div>
     </div>
     <div class="row" style="height: 15%">
-        <h4 style="margin: 0;">Select tariff:</h4>
+        <h4 style="margin: 0;">Select tariff</h4>
         <hr style="width: 80%; float: left;">
     </div>
     <div class="row" style="height: 40%">
@@ -42,7 +42,7 @@
 </div>
 <div class="col" style="width: 50%">
     <div class="row" style="height: 15%">
-        <h4 style="margin: 0;">Tariff Details:</h4>
+        <h4 style="margin: 0;">Tariff Details</h4>
         <hr style="width: 80%; float: left;">
     </div>
     <div class="row" style="height: 45%">
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="row" style="height: 15%">
-        <h4 style="margin: 0;">Actions:</h4>
+        <h4 style="margin: 0;">Actions</h4>
         <hr style="width: 80%; float: left;">
     </div>
     <div class="row" style="height: 40%">
